--- a/src/_includes/partials/blogpost.css
+++ b/src/_includes/partials/blogpost.css
@@ -3,16 +3,20 @@
   display: flex;
   block-size: 100%;
   flex-direction: column;
+  margin-block-end: var(--spacing-double);
 }
 
 @media (min-width: 54.875em) {
   .blog {
     max-height: 360px;
+    margin-block-end: 0;
   }
 }
 
-.blog-graphic-wrapper {
-  block-size: 200px;
+@media (min-width: 54.875em) {
+  .blog-graphic-wrapper {
+    block-size: 200px;
+  }
 }
 
 .blog-content-wrapper {
@@ -32,6 +36,7 @@
   inline-size: 100%;
   object-fit: cover;
   object-position: center;
+  aspect-ratio: 4 / 2;
 }
 
 .blog-1 .blog-graphic {
