--- a/src/_includes/partials/job.css
+++ b/src/_includes/partials/job.css
@@ -3,11 +3,13 @@
   display: flex;
   block-size: 100%;
   flex-direction: column;
+  margin-block-end: var(--spacing-double);
 }
 
 @media (min-width: 54.875em) {
     .job {
         max-height: 340px;
+        margin-block-end: 0;
     }
 }
 
@@ -32,6 +34,7 @@
   inline-size: 100%;
   object-fit: cover;
   object-position: center;
+  aspect-ratio: 4 / 2;
 }
 
 .job-1 .job-graphic,
